crates/php-parser/tests/snapshots/integration__stmt_class_name_11.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(& result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Interface": {
          "name": "PARENT",
          "extends": [],
          "members": [],
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 25
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 25
  }
}
